src/app/src/antlr/BaneQLParser.ts
// Generated from ./src/antlr/BaneQL.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { BaneQLListener } from "./BaneQLListener";
import { BaneQLVisitor } from "./BaneQLVisitor";


export class BaneQLParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly PROPERTY = 18;
	public static readonly LITERAL_VALUE = 19;
	public static readonly EMAIL = 20;
	public static readonly DOMAINNAME_OR_IP = 21;
	public static readonly STRING = 22;
	public static readonly NUMBER = 23;
	public static readonly WS = 24;
	public static readonly RULE_query = 0;
	public static readonly RULE_union = 1;
	public static readonly RULE_expressionBegins = 2;
	public static readonly RULE_changeMode = 3;
	public static readonly RULE_expressionContinuation = 4;
	public static readonly RULE_filterFunction = 5;
	public static readonly RULE_selectProperties = 6;
	public static readonly RULE_inclusive = 7;
	public static readonly RULE_exclusive = 8;
	public static readonly RULE_matchers = 9;
	public static readonly RULE_valueSelection = 10;
	public static readonly RULE_methodCall = 11;
	public static readonly RULE_methodCallArguments = 12;
	public static readonly RULE_argument = 13;
	public static readonly RULE_equalitySelection = 14;
	public static readonly RULE_gteSelection = 15;
	public static readonly RULE_lteSelection = 16;
	public static readonly RULE_rawValue = 17;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"query", "union", "expressionBegins", "changeMode", "expressionContinuation", 
		"filterFunction", "selectProperties", "inclusive", "exclusive", "matchers", 
		"valueSelection", "methodCall", "methodCallArguments", "argument", "equalitySelection", 
		"gteSelection", "lteSelection", "rawValue",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'>'", "'<'", "'fromasp'", "'('", "')'", "'toasp'", "'pivot'", 
		"'zonefam'", "'zone'", "'subs'", "'cols'", "'+'", "'-'", "','", "'='", 
		"'>='", "'<='",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "PROPERTY", "LITERAL_VALUE", 
		"EMAIL", "DOMAINNAME_OR_IP", "STRING", "NUMBER", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(BaneQLParser._LITERAL_NAMES, BaneQLParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return BaneQLParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "BaneQL.g4"; }

	// @Override
	public get ruleNames(): string[] { return BaneQLParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return BaneQLParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(BaneQLParser._ATN, this);
	}
	// @RuleVersion(0)
	public query(): QueryContext {
		let _localctx: QueryContext = new QueryContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, BaneQLParser.RULE_query);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 38;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case BaneQLParser.T__0:
			case BaneQLParser.T__1:
				{
				this.state = 36;
				this.changeMode();
				}
				break;
			case BaneQLParser.PROPERTY:
			case BaneQLParser.LITERAL_VALUE:
			case BaneQLParser.EMAIL:
			case BaneQLParser.DOMAINNAME_OR_IP:
			case BaneQLParser.NUMBER:
				{
				this.state = 37;
				this.union();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 41;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === BaneQLParser.T__10) {
				{
				this.state = 40;
				this.selectProperties();
				}
			}

			this.state = 43;
			this.match(BaneQLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public union(): UnionContext {
		let _localctx: UnionContext = new UnionContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, BaneQLParser.RULE_union);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 45;
			this.expressionBegins();
			this.state = 49;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << BaneQLParser.PROPERTY) | (1 << BaneQLParser.LITERAL_VALUE) | (1 << BaneQLParser.EMAIL) | (1 << BaneQLParser.DOMAINNAME_OR_IP) | (1 << BaneQLParser.NUMBER))) !== 0)) {
				{
				{
				this.state = 46;
				this.expressionBegins();
				}
				}
				this.state = 51;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expressionBegins(): ExpressionBeginsContext {
		let _localctx: ExpressionBeginsContext = new ExpressionBeginsContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, BaneQLParser.RULE_expressionBegins);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 52;
			this.matchers();
			this.state = 56;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << BaneQLParser.T__0) | (1 << BaneQLParser.T__1) | (1 << BaneQLParser.T__2) | (1 << BaneQLParser.T__5) | (1 << BaneQLParser.T__6) | (1 << BaneQLParser.T__7) | (1 << BaneQLParser.T__8) | (1 << BaneQLParser.T__9) | (1 << BaneQLParser.T__11) | (1 << BaneQLParser.T__12))) !== 0)) {
				{
				{
				this.state = 53;
				this.expressionContinuation();
				}
				}
				this.state = 58;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public changeMode(): ChangeModeContext {
		let _localctx: ChangeModeContext = new ChangeModeContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, BaneQLParser.RULE_changeMode);
		try {
			let _alt: number;
			this.state = 73;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case BaneQLParser.T__0:
				_localctx = new OutgoingContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 59;
				this.match(BaneQLParser.T__0);
				this.state = 63;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 60;
						this.expressionContinuation();
						}
						}
					}
					this.state = 65;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
				}
				}
				break;
			case BaneQLParser.T__1:
				_localctx = new IncomingContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 66;
				this.match(BaneQLParser.T__1);
				this.state = 70;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 67;
						this.expressionContinuation();
						}
						}
					}
					this.state = 72;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expressionContinuation(): ExpressionContinuationContext {
		let _localctx: ExpressionContinuationContext = new ExpressionContinuationContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, BaneQLParser.RULE_expressionContinuation);
		try {
			this.state = 79;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case BaneQLParser.T__11:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 75;
				this.inclusive();
				}
				break;
			case BaneQLParser.T__12:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 76;
				this.exclusive();
				}
				break;
			case BaneQLParser.T__2:
			case BaneQLParser.T__5:
			case BaneQLParser.T__6:
			case BaneQLParser.T__7:
			case BaneQLParser.T__8:
			case BaneQLParser.T__9:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 77;
				this.filterFunction();
				}
				break;
			case BaneQLParser.T__0:
			case BaneQLParser.T__1:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 78;
				this.changeMode();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public filterFunction(): FilterFunctionContext {
		let _localctx: FilterFunctionContext = new FilterFunctionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, BaneQLParser.RULE_filterFunction);
		try {
			this.state = 111;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case BaneQLParser.T__2:
				_localctx = new FromAspContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 81;
				this.match(BaneQLParser.T__2);
				this.state = 82;
				this.match(BaneQLParser.T__3);
				this.state = 83;
				this.methodCallArguments();
				this.state = 84;
				this.match(BaneQLParser.T__4);
				}
				break;
			case BaneQLParser.T__5:
				_localctx = new ToAspContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 86;
				this.match(BaneQLParser.T__5);
				this.state = 87;
				this.match(BaneQLParser.T__3);
				this.state = 88;
				this.methodCallArguments();
				this.state = 89;
				this.match(BaneQLParser.T__4);
				}
				break;
			case BaneQLParser.T__6:
				_localctx = new PivotContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 91;
				this.match(BaneQLParser.T__6);
				this.state = 92;
				this.match(BaneQLParser.T__3);
				this.state = 93;
				this.methodCallArguments();
				this.state = 94;
				this.match(BaneQLParser.T__4);
				}
				break;
			case BaneQLParser.T__7:
				_localctx = new ZoneFamContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 96;
				this.match(BaneQLParser.T__7);
				this.state = 97;
				this.match(BaneQLParser.T__3);
				this.state = 98;
				this.methodCallArguments();
				this.state = 99;
				this.match(BaneQLParser.T__4);
				}
				break;
			case BaneQLParser.T__8:
				_localctx = new ZoneContext(_localctx);
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 101;
				this.match(BaneQLParser.T__8);
				this.state = 102;
				this.match(BaneQLParser.T__3);
				this.state = 103;
				this.methodCallArguments();
				this.state = 104;
				this.match(BaneQLParser.T__4);
				}
				break;
			case BaneQLParser.T__9:
				_localctx = new SubsContext(_localctx);
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 106;
				this.match(BaneQLParser.T__9);
				this.state = 107;
				this.match(BaneQLParser.T__3);
				this.state = 108;
				this.methodCallArguments();
				this.state = 109;
				this.match(BaneQLParser.T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public selectProperties(): SelectPropertiesContext {
		let _localctx: SelectPropertiesContext = new SelectPropertiesContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, BaneQLParser.RULE_selectProperties);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this.match(BaneQLParser.T__10);
			this.state = 114;
			this.match(BaneQLParser.T__3);
			this.state = 115;
			this.methodCallArguments();
			this.state = 116;
			this.match(BaneQLParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public inclusive(): InclusiveContext {
		let _localctx: InclusiveContext = new InclusiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, BaneQLParser.RULE_inclusive);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 118;
			this.match(BaneQLParser.T__11);
			this.state = 119;
			this.matchers();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public exclusive(): ExclusiveContext {
		let _localctx: ExclusiveContext = new ExclusiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, BaneQLParser.RULE_exclusive);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 121;
			this.match(BaneQLParser.T__12);
			this.state = 122;
			this.matchers();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public matchers(): MatchersContext {
		let _localctx: MatchersContext = new MatchersContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, BaneQLParser.RULE_matchers);
		try {
			this.state = 131;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				_localctx = new MatchMethodCallContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 124;
				this.methodCall();
				}
				break;

			case 2:
				_localctx = new MatchValueSelectionContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 125;
				this.valueSelection();
				}
				break;

			case 3:
				_localctx = new MatchEqualitySelectionContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 126;
				this.equalitySelection();
				}
				break;

			case 4:
				_localctx = new MatchGteSelectionContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 127;
				this.gteSelection();
				}
				break;

			case 5:
				_localctx = new MatchLteSelectionContext(_localctx);
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 128;
				this.lteSelection();
				}
				break;

			case 6:
				_localctx = new MatchPropertyContext(_localctx);
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 129;
				this.match(BaneQLParser.PROPERTY);
				}
				break;

			case 7:
				_localctx = new MatchNumberContext(_localctx);
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 130;
				this.match(BaneQLParser.NUMBER);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public valueSelection(): ValueSelectionContext {
		let _localctx: ValueSelectionContext = new ValueSelectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, BaneQLParser.RULE_valueSelection);
		try {
			this.state = 136;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case BaneQLParser.EMAIL:
				_localctx = new EmailContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 133;
				this.match(BaneQLParser.EMAIL);
				}
				break;
			case BaneQLParser.DOMAINNAME_OR_IP:
				_localctx = new DomainOrIPContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 134;
				this.match(BaneQLParser.DOMAINNAME_OR_IP);
				}
				break;
			case BaneQLParser.LITERAL_VALUE:
				_localctx = new LiteralContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 135;
				this.match(BaneQLParser.LITERAL_VALUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public methodCall(): MethodCallContext {
		let _localctx: MethodCallContext = new MethodCallContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, BaneQLParser.RULE_methodCall);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this.match(BaneQLParser.PROPERTY);
			this.state = 139;
			this.match(BaneQLParser.T__3);
			this.state = 140;
			this.methodCallArguments();
			this.state = 141;
			this.match(BaneQLParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public methodCallArguments(): MethodCallArgumentsContext {
		let _localctx: MethodCallArgumentsContext = new MethodCallArgumentsContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, BaneQLParser.RULE_methodCallArguments);
		let _la: number;
		try {
			this.state = 152;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case BaneQLParser.T__4:
				this.enterOuterAlt(_localctx, 1);
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			case BaneQLParser.PROPERTY:
			case BaneQLParser.STRING:
			case BaneQLParser.NUMBER:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 144;
				this.argument();
				this.state = 149;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === BaneQLParser.T__13) {
					{
					{
					this.state = 145;
					this.match(BaneQLParser.T__13);
					this.state = 146;
					this.argument();
					}
					}
					this.state = 151;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public argument(): ArgumentContext {
		let _localctx: ArgumentContext = new ArgumentContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, BaneQLParser.RULE_argument);
		try {
			this.state = 158;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 154;
				this.equalitySelection();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 155;
				this.match(BaneQLParser.PROPERTY);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 156;
				this.match(BaneQLParser.STRING);
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 157;
				this.match(BaneQLParser.NUMBER);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public equalitySelection(): EqualitySelectionContext {
		let _localctx: EqualitySelectionContext = new EqualitySelectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, BaneQLParser.RULE_equalitySelection);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 160;
			this.match(BaneQLParser.PROPERTY);
			this.state = 161;
			this.match(BaneQLParser.T__14);
			this.state = 162;
			this.rawValue();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public gteSelection(): GteSelectionContext {
		let _localctx: GteSelectionContext = new GteSelectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, BaneQLParser.RULE_gteSelection);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 164;
			this.match(BaneQLParser.PROPERTY);
			this.state = 165;
			this.match(BaneQLParser.T__15);
			this.state = 166;
			this.match(BaneQLParser.NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public lteSelection(): LteSelectionContext {
		let _localctx: LteSelectionContext = new LteSelectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, BaneQLParser.RULE_lteSelection);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 168;
			this.match(BaneQLParser.PROPERTY);
			this.state = 169;
			this.match(BaneQLParser.T__16);
			this.state = 170;
			this.match(BaneQLParser.NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public rawValue(): RawValueContext {
		let _localctx: RawValueContext = new RawValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, BaneQLParser.RULE_rawValue);
		try {
			this.state = 176;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case BaneQLParser.STRING:
				_localctx = new StringContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 172;
				this.match(BaneQLParser.STRING);
				}
				break;
			case BaneQLParser.NUMBER:
				_localctx = new NumberContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 173;
				this.match(BaneQLParser.NUMBER);
				}
				break;
			case BaneQLParser.PROPERTY:
				_localctx = new PropertyLikeValueContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 174;
				this.match(BaneQLParser.PROPERTY);
				}
				break;
			case BaneQLParser.LITERAL_VALUE:
				_localctx = new LiteralValueContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 175;
				this.match(BaneQLParser.LITERAL_VALUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!BaneQLParser.__ATN) {
			BaneQLParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(BaneQLParser._serializedATN));
		}

		return BaneQLParser.__ATN;
	}

}

export class QueryContext extends ParserRuleContext {
	public EOF(): TerminalNode { return this.getToken(BaneQLParser.EOF, 0); }
	public changeMode(): ChangeModeContext | undefined {
		return this.tryGetRuleContext(0, ChangeModeContext);
	}
	public union(): UnionContext | undefined {
		return this.tryGetRuleContext(0, UnionContext);
	}
	public selectProperties(): SelectPropertiesContext | undefined {
		return this.tryGetRuleContext(0, SelectPropertiesContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return BaneQLParser.RULE_query; }
	// @Override
	public enterRule(listener: BaneQLListener): void {
		if (listener.enterQuery) {
			listener.enterQuery(this);
		}
	}
	// @Override
	public exitRule(listener: BaneQLListener): void {
		if (listener.exitQuery) {
			listener.exitQuery(this);
		}
	}
	// @Override
	public accept<Result>(visitor: BaneQLVisitor<Result>): Result {
		if (visitor.visitQuery) {
			return visitor.visitQuery(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class UnionContext extends ParserRuleContext {
	public expressionBegins(): ExpressionBeginsContext[];
	public expressionBegins(i: number): ExpressionBeginsContext;
	public expressionBegins(i?: number): ExpressionBeginsContext | ExpressionBeginsContext[] {
		if (i === undefined) {
			return this.getRuleContexts(ExpressionBeginsContext);
		} else {
			return this.getRuleContext(i, ExpressionBeginsContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return BaneQLParser.RULE_union; }
	// @Override
	public enterRule(listener: BaneQLListener): void {
		if (listener.enterUnion) {
			listener.enterUnion(this);
		}
	}
	// @Override
	public exitRule(listener: BaneQLListener): void {
		if (listener.exitUnion) {
			listener.exitUnion(this);
		}
	}
	// @Override
	public accept<Result>(visitor: BaneQLVisitor<Result>): Result {
		if (visitor.visitUnion) {
			return visitor.visitUnion(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

